# tgc-currency-server

./: README.md  genesis.json
KuYouWenLv/deposit/: deposit.abi  deposit.wasm  readme.md
KuYouWenLv/deposit/include/: deposit.hpp
KuYouWenLv/deposit/src/: deposit.cpp
libraries/chain/include/eosio/chain/: exceptions.hpp
plugins/: CMakeLists.txt
plugins/chain_plugin/: chain_plugin.cpp
plugins/chain_plugin/include/eosio/chain_plugin/: chain_plugin.hpp
plugins/currency_plugin/: CMakeLists.txt  currency_plugin.cpp
plugins/currency_plugin/include/eosio/currency_plugin/: currency_plugin.hpp
plugins/net_plugin/: net_plugin.cpp
programs/nodeos/: CMakeLists.txt
scripts/: eosio_build_centos.sh  eosio_build_ubuntu.sh
